--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,9 @@
 
     <title>CarolinaPay</title>
   </head>
-  <body class="d-flex flex-column h-100">
+  <body class="d-flex flex-column h-100" background="scss/unc-wallpaper.jpg" style="background-repeat:repeat;
+  background-attachment:fixed;
+  overflow:scroll;">
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
